# hex-engine

./: .gitignore  CMakeLists.txt  README.md
cli/: install.bat
cmake/: tests.cmake
private/sources/hex/: hex.cpp
public/hex/: hex.hpp
src/: HexEngine.cpp  HexEngine.hpp
src/core/: CMakeLists.txt
src/core/src/hex/core/game/: Game.cpp  Game.hpp
tests/: CMakeLists.txt
tests/core/game/: GameTest.cpp
